--- a/assignments/assignment3/website/index.html
+++ b/assignments/assignment3/website/index.html
@@ -1,13 +1,110 @@
 <!DOCTYPE html>
-<html lang="nl">
+<html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./css/main.css">
-    <title>[STUDENT NAME] | [CLASS] | Opdracht 3</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="https://use.typekit.net/tlh5msg.css">
+	<link rel="stylesheet" href="./css/styles.css">
+	<script>
+		const toggleNavigationIcon = (x) => {
+			const navLinks = document.querySelector('.nav-links');
+			navLinks.classList.toggle('toggled');
+			x.classList.toggle('toggled');
+		}
+	</script>
+	<title>Homepagina</title>
 </head>
+
 <body>
-    <div>Pas deze pagina aan met jouw code om opdracht 3 te vervolledigen!</div>
+
+	<!-- Navigation -->
+	<nav>
+		<div class="header container-fluid">
+			<div class="container">
+				<div class="row align-items-center">
+					<div class="col-8 col-md-4 logo"></div>
+					<div class="col-4 col-md-8">
+						<div class="row justify-content-end align-items-center">
+							<div class="nav-links">
+								<ul>
+									<li>
+										<a href="index.html" title="De homepagina">Home</a>
+									</li>
+									<li>
+										<a href="webshop.html" title="De webshop">Webshop</a>
+									</li>
+									<li>
+										<a href="configuratie.html" title="Zwemgelegenheid configureren">Configuratie</a>
+									</li>
+									<li>
+										<a href="realisatie.html" title="Gerealiseerde zwemgelegenheden">Realisatie</a>
+									</li>
+									<li>
+										<a href="contact.html" title="Contacteer ons">Contact</a>
+									</li>
+								</ul>
+							</div>
+							<div class="nav-toggler" onclick="toggleNavigationIcon(this)">
+								<div class="bar1"></div>
+								<div class="bar2"></div>
+								<div class="bar3"></div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</nav>
+	<div>
+		<img class="bannerafbeelding" src="images/photo-1560747571-bcf9a177ac53.jpg" alt="bannerafbeelding">
+	</div>
+	<div class="container">
+		<div>
+			<div>
+				<h1>Natuurlijke zwembaden</h1>
+				<h2>Zwemvijvers, hybride zwembaden en biozwembaden </h2>
+			</div>
+			<div>
+				<h3>Zwembadexpert</h3>
+				<p>Bio Zwemmen is dé zwembadexpert. We leveren en installeren een uitgebreid assortiment zwemvijvers en
+					biozwembaden. We zijn erkend Starline-dealer voor de regio Gent. Via onze site kun je op een
+					makkelijke
+					manier info zoeken voor hetgeen je nodig hebt. De handige configuratietool helpt je hierbij om een
+					(vrijblijvende) offerte aan te vragen.</p>
+			</div>
+			<div>
+				<h3>Welke zwemgelegenheid past bij mij?</h3>
+				<p>Wil je genieten van zwemplezier in je tuin, dan moet je eerst een keuze maken tussen het biozwembad
+					of een zwemvijver. Het verschil tussen beide zwemgelegenheden ligt vooral in de wijze van filteren:
+					zwemvijvers filteren het water op een natuurlijke wijze, namelijk met planten en gesteenten. Bij
+					klassieke zwembaden wordt de kwaliteit van het water op peil gehouden met behulp van chloor en
+					filtersystemen.
+					De middenweg is dan een hybride zwembad. Deze combineert de voordelen van beide werelden.</p>
+			</div>
+			<div class="projecten">
+				<h3>Enkele projecten</h3>
+				<div class="row align-items-center">
+					<div class="col-12 col-md-4"><img src="images/photo-1544984243-ec57ea16fe25.jpg" alt=""></div>
+					<div class="col-12 col-md-4"><img src="images/photo-1547738074-ea85eb0ed085.jpg" alt=""></div>
+					<div class="col-12 col-md-4"><img src="images/pexels-photo-3225531.jpeg" alt=""></div>
+				</div>
+			</div>
+		</div>
+	</div>
 </body>
+<footer>
+	<div class="container">
+		<div class="row align-items-center">
+			<div class="col-12 col-md-8">
+				<p>© Biozwemmen. Alle rechten voorbehouden.</p>
+			</div>
+			<div class="col-0col-md-4">
+				<p><a href=#>Privacy</a> <br> <a href=#>Voorwaarden</a></p>
+			</div>
+		</div>
+	</div>
+</footer>
 </html>
