HTML en CSS bijgewerkt
configuratie, realisatie en contact

--- a/assignments/assignment3/website/configuratie.html
+++ b/assignments/assignment3/website/configuratie.html
@@ -61,7 +61,54 @@
     </nav>
     <div class="container">
         <h1 class="pagina">Configuratie</h1>
-        <p class="pagina-uitleg">Heeft u interesse in het zetten van een zwemgelegenheid? Met deze handige tool kunt u een (vrijblijvende)
+        <p class="pagina-uitleg">Heeft u interesse in het zetten van een zwemgelegenheid? Met deze handige tool kunt u
+            een (vrijblijvende)
             offerte aanvragen. U kunt zelf de gewenste maten, kleuren... invoegen.
         </p>
     </div>
+    <div class="container">
+        <h3 class="conf">Afmetingen</h3>
+        <div class="row align-items-center">
+            <div class="col-12 col-md-4">
+                <p class="confp">Lengte <input type="text" class="form-control" placeholder=""></p>
+            </div>
+            <div class="col-12 col-md-4">
+                <p class="confp">Breedte <input type="text" class="form-control" placeholder=""></p>
+            </div>
+            <div class="col-12 col-md-4">
+                <p class="confp">Diepte <input type="text" class="form-control" placeholder=""></p>
+            </div>
+        </div>
+        <h3 class="conf">Kleur</h3>
+        <div class="kleurtjes">
+            <a href="#"><span class="dot1"></span></a>
+            <a href="#"><span class="dot2"></span></a>
+            <a href="#"><span class="dot3"></span></a>
+            <a href="#"><span class="dot4"></span></a>
+            <a href="#"><span class="dot5"></span></a>
+        </div>
+        <h3 class="conf">Randsteen</h3>
+        <div class="keuze-conf">
+            <select name="hobbys" id="hobbys">
+                <option value="voetbal">Graniet</option>
+                <option value="slapen">Gras</option>
+                <option value="dansen">Blauwe hardsteen</option>
+            </select>
+        </div>
+        <div class="knop">
+            <button type="button">OFFERTE</button>
+        </div>
+    </div>
+
+    <footer>
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-12 col-md-8">
+                    <p>© Biozwemmen. Alle rechten voorbehouden.</p>
+                </div>
+                <div class="col-0col-md-4">
+                    <p><a href=#>Privacy</a> <a href=#>Voorwaarden</a></p>
+                </div>
+            </div>
+        </div>
+    </footer>
