--- a/assignments/assignment3/website/index.html
+++ b/assignments/assignment3/website/index.html
@@ -102,7 +102,7 @@
 				<p>© Biozwemmen. Alle rechten voorbehouden.</p>
 			</div>
 			<div class="col-0col-md-4">
-				<p><a href=#>Privacy</a> <br> <a href=#>Voorwaarden</a></p>
+				<p><a href=#>Privacy</a> <a href=#>Voorwaarden</a></p>
 			</div>
 		</div>
 	</div>
