--- a/assignments/assignment3/website/realisatie.html
+++ b/assignments/assignment3/website/realisatie.html
@@ -61,12 +61,41 @@
     </nav>
     <div class="container">
         <h1 class="pagina">Realisaties</h1>
-        <p class="pagina-uitleg">Hieronder zijn foto's te zien van zwemgelegenheden en projecten die in het verleden reeds gerealiseerd
+        <p class="pagina-uitleg">Hieronder zijn foto's te zien van zwemgelegenheden en projecten die in het verleden
+            reeds gerealiseerd
             geweest zijn door ons.
             Deze projecten omvatten zowel zwemvijvers als biozwembaden en hybride zwembaden.
             Indien u geïnteresseerd zou zijn in de plaatsing van zo'n zwemgelegenheid in uw tuin, neem even contact op
             met ons, dan kijken wij hoe het verder kan. </p>
     </div>
     <div class="container">
-        
+        <div class="afbeeldingen-rea">
+            <div class="row align-items-center">
+                <div class="col-8 col-md-4"><img src="images/photo-1466354424719-343280fe118b.jpg" alt=""></div>
+                <div class="col-4 col-md-6"><img src="images/photo-1544984243-ec57ea16fe25.jpg" alt=""></div>
+                <div class="col-4 col-md-2"><img src="images/pexels-photo-3225531.jpeg" alt=""></div>
+                <div class="col-8 col-md-2"><img src="images/photo-1517374985980-5958a4b6677c.jpg" alt=""></div>
+                <div class="col-6 col-md-4"><img src="images/photo-1509600110300-21b9d5fedeb7.jpg" alt=""></div>
+                <div class="col-6 col-md-6"><img src="images/photo-1531792849206-d96ac0ff3c5b.jpg" alt=""></div>
+                <div class="col-8 col-md-8"><img src="images/photo-1547738074-ea85eb0ed085.jpg" alt=""></div>
+                <div class="col-4 col-md-4"><img src="images/photo-1560747571-bcf9a177ac53.jpg" alt=""></div>
+                <div class="col-6 col-md-6"><img src="images/photo-1539823903325-6e1b5630081a.jpg" alt=""></div>
+                <div class="col-6 col-md-6"><img src="images/photo-1560920452-473c72e878de.jpg" alt=""></div>
+                <div class="col-4 col-md-4"><img src="images/photo-1511857543145-0c6865f84a50.jpg" alt=""></div>
+                <div class="col-8 col-md-8"><img src="images/photo-1560747571-79f71076f92f.jpg" alt=""></div>
+            </div>
+        </div>
     </div>
+
+    <footer>
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-12 col-md-8">
+                    <p>© Biozwemmen. Alle rechten voorbehouden.</p>
+                </div>
+                <div class="col-0col-md-4">
+                    <p><a href=#>Privacy</a> <a href=#>Voorwaarden</a></p>
+                </div>
+            </div>
+        </div>
+    </footer>
