--- a/assignments/assignment3/website/webshop 2.html
+++ b/assignments/assignment3/website/webshop 2.html
@@ -107,3 +107,16 @@
             </div>
         </div>
     </div>
+
+    <footer>
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-12 col-md-8">
+                    <p>© Biozwemmen. Alle rechten voorbehouden.</p>
+                </div>
+                <div class="col-0col-md-4">
+                    <p><a href=#>Privacy</a> <a href=#>Voorwaarden</a></p>
+                </div>
+            </div>
+        </div>
+    </footer>
