Afwerking webpagina's opdracht 3

--- a/assignments/assignment3/website/configuratie.html
+++ b/assignments/assignment3/website/configuratie.html
@@ -68,15 +68,17 @@
     </div>
     <div class="container">
         <h3 class="conf">Afmetingen</h3>
-        <div class="row align-items-center">
-            <div class="col-12 col-md-4">
-                <p class="confp">Lengte <input type="text" class="form-control" placeholder=""></p>
-            </div>
-            <div class="col-12 col-md-4">
-                <p class="confp">Breedte <input type="text" class="form-control" placeholder=""></p>
-            </div>
-            <div class="col-12 col-md-4">
-                <p class="confp">Diepte <input type="text" class="form-control" placeholder=""></p>
+        <div class="afmetingen">
+            <div class="row align-items-center">
+                <div class="col-12 col-md-4">
+                    <p class="confp">Lengte <input type="text" class="form-control" placeholder=""></p>
+                </div>
+                <div class="col-12 col-md-4">
+                    <p class="confp">Breedte <input type="text" class="form-control" placeholder=""></p>
+                </div>
+                <div class="col-12 col-md-4">
+                    <p class="confp">Diepte <input type="text" class="form-control" placeholder=""></p>
+                </div>
             </div>
         </div>
         <h3 class="conf">Kleur</h3>
