--- a/assignments/assignment3/website/contact.html
+++ b/assignments/assignment3/website/contact.html
@@ -69,24 +69,27 @@
 				<p><i class="fas fa-envelope"></i><input type="text" class="form-control" placeholder="EMAIL"></p> <br>
 				<p><i class="fas fa-reply"></i><input type="text" class="form-control" placeholder="BERICHT"></p>
 				<div class="knop">
-					<button type="button">OFFERTE</button>
+					<button type="button">VERSTUUR</button>
 				</div>
 			</div>
 		</div>
 	</div>
 </body>
 
-
 <div class="container-contact">
-	<div class= "col-12 col-md-6">
-		<p><i class="fas fa-calendar-alt"></i>Ma - Za: op afspraak</p>
-		<p>Zondag en feestdagen: gesloten</p>
-		<p><i class="fas fa-clock"></i>9u - 12u     14u - 17u</p>
-	</div>
-	<div class= "col-12 col-md-6">
-		<p><i class="fas fa-map-marker-alt"></i>Industrieweg 232, 9030 Gent</p>
-		<p><i class="fas fa-mobile-alt"></i>09 234 86 00</p>
-		<p><i class="fas fa-envelope"></i>info@biozwemmen.be</p>
+	<div class="container">
+		<div class="row align-items-center">
+			<div class="col-12 col-md-6">
+				<p><i class="fas fa-calendar-alt"></i>Ma - Za: op afspraak</p>
+				<p> &emsp; &emsp; &ensp;  Zondag en feestdagen: gesloten</p>
+				<p><i class="fas fa-clock"></i>9u - 12u &emsp; 14u - 17u</p>
+			</div>
+			<div class="col-12 col-md-6">
+				<p><i class="fas fa-map-marker-alt"></i> Industrieweg 232, 9030 Gent</p>
+				<p><i class="fas fa-mobile-alt"></i>&ensp;09 234 86 00</p>
+				<p><i class="fas fa-envelope"></i>info@biozwemmen.be</p>
+			</div>
+		</div>
 	</div>
 </div>
 <footer class="contactfooter">
