--- a/assignments/assignment3/website/webshop 2.html
+++ b/assignments/assignment3/website/webshop 2.html
@@ -62,11 +62,11 @@
     <div class="container">
         <div class="list1">
             <div>
-                <h2 class="onderschrift">Accessoires</h3>
+                <h2 class="onderschrift first">Accessoires</h2>
             </div>
             <div class="row align-items-top">
                 <div class="col-12 col-md-4">
-                    <img src="images/2644_4.jpg" alt="">
+                    <a href="detail.html"><img src="images/2644_4.jpg" alt=""></a>
                     <h3>Schepnet</h3>
                     <p>Extra sterk schepnet om vuil dat in of op het water drijft, of op de bodem ligt, uit het zwembad
                         te scheppen. Dit schepnet is voorzien van een magneet waardoor hij ook kleine metalen voorwerpen
@@ -74,14 +74,14 @@
                         meegeleverd).</p>
                 </div>
                 <div class="col-12 col-md-4">
-                    <img src="images/bestway-flowclear-aquatronix-automatische-zwembad-stofzuiger.jpg" alt="">
+                    <a href="detail.html"><img src="images/bestway-flowclear-aquatronix-automatische-zwembad-stofzuiger.jpg" alt=""></a>
                     <h3>Stofzuiger</h3>
                     <p>Praktische bodemstofzuiger van Flowclear. Geschikt voor zowel inbouw- als opbouwbaden met een
                         vlakke bodem. De robot werkt op oplaadbare Lithium batterijen. Geen gedoe met snoeren, dus het
                         hele bad probleemloos bereikbaar.</p>
                 </div>
                 <div class="col-12 col-md-4">
-                    <img src="images/wat-is-epdm-vijverfolie-feat.jpg" alt="">
+                    <a href="detail.html"><img src="images/wat-is-epdm-vijverfolie-feat.jpg" alt=""></a>
                     <h3>Rubberfolie</h3>
                     <p>EPDM vijverfolie is een rubberfolie die synthetisch vervaardigd is. Deze vijverfolie toepassen
                         bij de aanleg van een vijver heeft een aantal grote voordelen.EPDM vijverfolie is rubberfolie
@@ -91,14 +91,14 @@
                     </p>
                 </div>
                 <div class="col-12 col-md-4">
-                    <img src="images/harry-grout--BxiBbWR7rA-unsplash.jpg" alt="">
+                    <a href="detail.html"><img src="images/harry-grout--BxiBbWR7rA-unsplash.jpg" alt=""></a>
                     <h3>Waterkraan</h3>
                     <p>Deze dubbele dienstbolkraan met gouden hendel is een van de mogelijke eindtoepassingen van je
                         (ver)nieuw(de) sanitaire netwerk. De kraan beschikt over een diameter van 1/2" en is
                         'aansluitklaar'</p>
                 </div>
                 <div class="col-12 col-md-4">
-                    <img src="images/ccb16d543c8b210f85e0428231d9e4aa.jpg" alt="">
+                    <a href="detail.html"><img src="images/ccb16d543c8b210f85e0428231d9e4aa.jpg" alt=""></a>
                     <h3>Waterverbeteraar</h3>
                     <p>Zelfs de fijnste, niet filterbare verontreinigingen kunnen ondanks filtertechniek het zicht in de
                         vijver vertroebelen. Met PondClear worden van minerale deeltjes uit afgestorven organisch
