--- a/assignments/assignment3/website/webshop 1.html
+++ b/assignments/assignment3/website/webshop 1.html
@@ -62,25 +62,25 @@
     <div class="container">
         <div class="list">
             <div>
-                <h2 class="onderschrift">Zwemgelegenheden</h3>
+                <h2 class="onderschrift first">Zwemgelegenheden</h2>
             </div>
             <div class="row align-items-top">
                 <div class="col-12 col-md-4">
-                    <img src="images/photo-1539823903325-6e1b5630081a.jpg" alt="">
+                    <a href="detail.html"><img src="images/photo-1539823903325-6e1b5630081a.jpg" alt=""></a>
                     <h3>Zwemvijver</h3>
                     <p>Een natuurlijke zwemvijver is een bad waarin de natuur zijn werk zelf doet. Deze bestaat steeds
                         uit 2 delen: een zwemzone en een filterzone(moeraszone). Deze filterzone kan zowel rechtstreeks
                         aansluiten op de zwemzone alsook apart van de zwemzone liggen.</p>
                 </div>
                 <div class="col-12 col-md-4">
-                    <img src="images/photo-1560747571-79f71076f92f.jpg" alt="">
+                    <a href="detail.html"><img src="images/photo-1560747571-79f71076f92f.jpg" alt=""></a>
                     <h3>Hybride zwemvijver</h3>
                     <p>Een hybride zwemvijver combineert de voordelen van een zwemvijver met die van een natuurlijk
                         zwembad. Het water is het hele jaar door kristalhelder. Een hybride bad is het hele jaar door
                         een plaatje: dé reden om het dicht bij de woning te integreren.</p>
                 </div>
                 <div class="col-12 col-md-4">
-                    <img src="images/photo-1536745511564-a5fa6e596e7b.jpg" alt="">
+                    <a href="detail.html"><img src="images/photo-1536745511564-a5fa6e596e7b.jpg" alt=""></a>
                     <h3>Biozwembad</h3>
                     <p>Een bio-zwembad is een 100 % chloorvrij natuurlijk zwembad in de ruime zin van het woord. Het
                         water van een bio-zwembad is kristalhelder en zijdezacht. De filtering van een bio-zwembad
